[package]
name = "testesp"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
resolver = "3"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "testesp"

[dependencies]
critical-section = { version = "1.1", default-features = false, features = [
  "std"
] }
embassy-executor = { version = "0.7", features = ["arch-std", "executor-thread"] }
embassy-time = { version = "0.4.0" }
esp-idf-svc = { version = "0.51", features = [
  "embassy-sync",
  "embassy-time-driver"
] }
log = "0.4"

[build-dependencies]
embuild = "0.33"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
