[package]
name = "zenoh-examples"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
resolver = "3"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/zenoh-pico-wrapper"]
bindings_header = "components/zenoh-pico-wrapper/zenoh-pico/include/zenoh-pico.h"
bindings_module = "zenoh_pico"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "zenoh-examples"

[dependencies]
critical-section = { version = "1.2", default-features = false, features = [
  "std"
] }
embassy-executor = { version = "0.9.1", features = [
  "arch-std",
  "executor-thread"
] }
embassy-time = { version = "0.5.0" }
esp-idf-svc = { version = "0.52.1", features = [
  "embassy-sync",
  "embassy-time-driver"
] }
log = "0.4"
static_cell = "2.1.1"

[build-dependencies]
embuild = "0.33"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
