set(ZENOH_PICO_REPO_DIR "${CMAKE_CURRENT_LIST_DIR}/zenoh-pico")

set(FRAG_MAX_SIZE $ENV{ZENOH_PICO_FRAG_MAX_SIZE})
set(BATCH_UNICAST_SIZE $ENV{ZENOH_PICO_BATCH_UNICAST_SIZE})
set(BATCH_MULTICAST_SIZE $ENV{ZENOH_PICO_BATCH_MULTICAST_SIZE})

# mimic the platformio extra_script.py behavior
file(GLOB_RECURSE ZENOH_PICO_SRCS "${ZENOH_PICO_REPO_DIR}/src/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_TESTS_SRCS "${ZENOH_PICO_REPO_DIR}/tests/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_EXAMPLES_SRCS "${ZENOH_PICO_REPO_DIR}/examples/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/arduino/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_EMSCRIPTEN_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/emscripten/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/freertos/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_RPI_PICO_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/rpi_pico/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_MBED_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/mbed/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_UNIX_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/unix/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FLIPPER_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/flipper/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_WINDOWS_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/windows/*") # cmake-lint: disable=C0301
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ZEPHYR_SRCS "${ZENOH_PICO_REPO_DIR}/src/system/zephyr/*") # cmake-lint: disable=C0301

list(REMOVE_ITEM ZENOH_PICO_SRCS
    ${ZENOH_PICO_TESTS_SRCS}
    ${ZENOH_PICO_EXAMPLES_SRCS}
    ${ZENOH_PICO_SYSTEM_ARDUINO_SRCS}
    ${ZENOH_PICO_SYSTEM_EMSCRIPTEN_SRCS}
    ${ZENOH_PICO_SYSTEM_FREERTOS_SRCS}
    ${ZENOH_PICO_SYSTEM_RPI_PICO_SRCS}
    ${ZENOH_PICO_SYSTEM_MBED_SRCS}
    ${ZENOH_PICO_SYSTEM_UNIX_SRCS}
    ${ZENOH_PICO_SYSTEM_FLIPPER_SRCS}
    ${ZENOH_PICO_SYSTEM_WINDOWS_SRCS}
    ${ZENOH_PICO_SYSTEM_ZEPHYR_SRCS}
)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS "${ZENOH_PICO_REPO_DIR}/include"
    REQUIRES esp_netif lwip freertos driver
)

target_compile_definitions(
    ${COMPONENT_LIB}
    PUBLIC
    ZENOH_ESPIDF
    FRAG_MAX_SIZE=${FRAG_MAX_SIZE}
    BATCH_UNICAST_SIZE=${BATCH_UNICAST_SIZE}
    BATCH_MULTICAST_SIZE=${BATCH_MULTICAST_SIZE}
)
