[package]
name = "hello-world-esp32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section.workspace = true
defmt.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = 2
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1  # LLVM can perform better optimizations using a single thread
