[package]
name = "hello-world-esp32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section.workspace = true
defmt.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
