[package]
name = "hello-esp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
esp-idf-svc.workspace = true
log.workspace = true

[build-dependencies]
embuild = "0.33"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
