[package]
name = "esp32-ping-pong"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/zenoh-pico-wrapper"]
bindings_header = "components/zenoh-pico-wrapper/zenoh-pico/include/zenoh-pico.h"
bindings_module = "zenoh_pico"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "esp32-ping"
path = "src/bin/ping.rs"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "esp32-pong"
path = "src/bin/pong.rs"

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
static_cell.workspace = true

[build-dependencies]
embuild.workspace = true

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
