[package]
name = "ping-pong"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "ping"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "pong"

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
static_cell.workspace = true
zenoh-pico.workspace = true

[build-dependencies]
embuild.workspace = true

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
