set(ZENOH_PICO_DIR $ENV{ZENOH_PICO_DIR})
set(FRAG_MAX_SIZE $ENV{ZENOH_PICO_FRAG_MAX_SIZE})
set(BATCH_UNICAST_SIZE $ENV{ZENOH_PICO_BATCH_UNICAST_SIZE})
set(BATCH_MULTICAST_SIZE $ENV{ZENOH_PICO_BATCH_MULTICAST_SIZE})

# mimic the platformio extra_script.py behavior
file(GLOB_RECURSE ZENOH_PICO_SRCS
    "${ZENOH_PICO_DIR}/src/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_SRCS
    "${ZENOH_PICO_DIR}/src/system/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_SRCS
    "${ZENOH_PICO_DIR}/src/system/arduino/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_OPENCR_SRCS
    "${ZENOH_PICO_DIR}/src/system/arduino/opencr/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_ESP32_SRCS
    "${ZENOH_PICO_DIR}/src/system/arduino/opencr/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_COMMON_SRCS
    "${ZENOH_PICO_DIR}/src/system/common/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_EMSCRIPTEN_SRCS
    "${ZENOH_PICO_DIR}/src/system/emscripten/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ESPIDF_SRCS
    "${ZENOH_PICO_DIR}/src/system/espidf/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FLIPPER_SRCS
    "${ZENOH_PICO_DIR}/src/system/flipper/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_SRCS
    "${ZENOH_PICO_DIR}/src/system/freertos/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_TCP_SRCS
    "${ZENOH_PICO_DIR}/src/system/freertos/freertos_plus_tcp/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_LWIP_SRCS
    "${ZENOH_PICO_DIR}/src/system/freertos/lwip/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_MBED_SRCS
    "${ZENOH_PICO_DIR}/src/system/mbed/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_RPI_PICO_SRCS
    "${ZENOH_PICO_DIR}/src/system/rpi_pico/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_THREADX_SRCS
    "${ZENOH_PICO_DIR}/src/system/threadx/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_THREADX_STM32_SRCS
    "${ZENOH_PICO_DIR}/src/system/threadx/stm32/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_UNIX_SRCS
    "${ZENOH_PICO_DIR}/src/system/unix/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_UNIX_LINK_SRCS
    "${ZENOH_PICO_DIR}/src/system/unix/link/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_WINDOWS_SRCS
    "${ZENOH_PICO_DIR}/src/system/windows/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ZEPHYR_SRCS
    "${ZENOH_PICO_DIR}/src/system/zephyr/*"
)

list(REMOVE_ITEM ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_SRCS})
list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_COMMON_SRCS})

list(APPEND COMPILE_DEFS
    FRAG_MAX_SIZE=${FRAG_MAX_SIZE}
    BATCH_UNICAST_SIZE=${BATCH_UNICAST_SIZE}
    BATCH_MULTICAST_SIZE=${BATCH_MULTICAST_SIZE}
)

list(APPEND COMPONENT_DEPS
  driver
)

list(APPEND COMPILE_DEFS
    FRAG_MAX_SIZE=${FRAG_MAX_SIZE}
    BATCH_UNICAST_SIZE=${BATCH_UNICAST_SIZE}
    BATCH_MULTICAST_SIZE=${BATCH_MULTICAST_SIZE}
)

list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_ESPIDF_SRCS})
list(APPEND COMPILE_DEFS ZENOH_ESPIDF)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS "${ZENOH_PICO_REPO_DIR}/include"
    REQUIRES ${COMPONENT_DEPS}
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC ${COMPILE_DEFS})
