set(SHARED_MODULE $ENV{CARGO_MANIFEST_DIR}/cmake/shared.cmake)
include(${SHARED_MODULE})

list(REMOVE_ITEM ZENOH_PICO_SRCS
    ${ZENOH_PICO_TESTS_SRCS}
    ${ZENOH_PICO_EXAMPLES_SRCS}
    ${ZENOH_PICO_SYSTEM_ARDUINO_SRCS}
    ${ZENOH_PICO_SYSTEM_EMSCRIPTEN_SRCS}
    ${ZENOH_PICO_SYSTEM_FREERTOS_SRCS}
    ${ZENOH_PICO_SYSTEM_RPI_PICO_SRCS}
    ${ZENOH_PICO_SYSTEM_MBED_SRCS}
    ${ZENOH_PICO_SYSTEM_UNIX_SRCS}
    ${ZENOH_PICO_SYSTEM_FLIPPER_SRCS}
    ${ZENOH_PICO_SYSTEM_WINDOWS_SRCS}
    ${ZENOH_PICO_SYSTEM_ZEPHYR_SRCS}
)
list(APPEND COMPILE_DEFS ZENOH_ESPIDF)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS "${ZENOH_PICO_REPO_DIR}/include"
    REQUIRES esp_netif lwip freertos driver
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC ${COMPILE_DEFS})
