include(${CMAKE_CURRENT_LIST_DIR}/zenoh-pico.cmake)

list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_ESPIDF_SRCS})
list(APPEND ZENOH_PICO_COMPILE_DEFS ZENOH_ESPIDF)
list(APPEND COMPONENT_DEPS driver)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS ${ZENOH_PICO_INCLUDE_DIR}
    REQUIRES ${COMPONENT_DEPS}
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC ${ZENOH_PICO_COMPILE_DEFS})
